--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -16,7 +16,7 @@
 	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "g=&#60;graph_name&#62;"  "http://diufpc304.unifr.ch:8080/ers/graph"
       </code>
     </p>
-    <form action="./graph" method="post">
+    <form action="./graph" method="post" name="create_graph">
       Graph: <input name="g" size="30" value"" id="g1" />
       <input type="submit" value="Create"/>
     </form>
@@ -27,7 +27,7 @@
 	curl -v -X GET -H "http://diufpc304.unifr.ch:8080/ers/graph?g=&#60;graph_name&#62;"
       </code>
     </p>
-    <form action="./graph" method="get">
+    <form action="./graph" method="get" name="get_graph">
       <input type="submit" value="Show all"/>
     </form>
 
@@ -37,7 +37,7 @@
 	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/graph?g=&#60;graph_name&#62;" 
       </code>
     </p>
-    <form action="./graph" method="get">
+    <form action="./graph" method="get" name="delete_graph">
       <input name="delete" type="hidden" size="15" value=""/>
       Graph: <input name="g" size="30" value="" id="g2" />
       <input type="submit" value="Delete graph"/>
@@ -51,7 +51,7 @@
 	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;g=&#60;graph_name&#62;"  "http://diufpc304.unifr.ch:8080/ers/create"
       </code>
     </p>
-    <form action="./create" method="post">
+    <form action="./create" method="post" name="create_entity">
       Entity: <input name="e" size="30" value="" id="e3"/>
       Property: <input name="p" size="30" value="" id="p3"/>
       Value: <input name="v" size="30" value="" id="v3"/>
@@ -65,9 +65,9 @@
 	curl -v -X POST -i -F filedata=@./rdf_ntriples/repo10k.nt http://diufpc304.unifr.ch:8080/ers/bulkload?g=&#60;graph_name&#62;
       </code>
     </p>
-    <form action="./bulkload" enctype="multipart/form-data" method="post">
+    <form action="./bulkload" enctype="multipart/form-data" method="post" name="bulkload">
+      Graph: <input type="text" name="g" size="15" id="g4"/>
       Entities file: <input type="file" name="file" size="30" value=""/>
-      Graph: <input name="g" size="15" value="" id="g4"/>
       <input type="submit" value="BulkLoad"/>
     </form>
 
@@ -77,7 +77,7 @@
 	curl -v -X GET http://localhost:8080/ers/read?e=&#60;entity&#62;&amp;g=&#60;graph_name&#62;
       </code>
     </p>
-    <form action="./read" method="get">
+    <form action="./read" method="get" name="read_entity">
       Entity: <input name="e" size="30" value="" id="e5"/>
       Graph: <input name="g" size="15" value="" id="g5" />
       <input type="submit" value="Read"/>
@@ -89,7 +89,7 @@
 	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v_old=&#60;value1&#62;&amp;v_new=&#60;value2&#62;&amp;g=&#60;graph_name&#62;"  "http://diufpc304.unifr.ch:8080/ers/update"
       </code>
     </p>
-    <form action="./update" method="post">
+    <form action="./update" method="post" name="update_entity">
       Entity: <input name="e" size="30" value="" id="e6"/>
       Property: <input name="p" size="30" value="" id="p6"/>
       Value old: <input name="v_old" size="30" value="" id="v_old6"/>
@@ -104,7 +104,7 @@
 	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/delete?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;g=&#60;graph_name&#62;" 
       </code>
     </p>
-    <form action="./delete" method="post">
+    <form action="./delete" method="post" name="delete_entity">
       Entity: <input name="e" size="30" value="" id="e7"/>
       Property: <input name="p" size="30" value="" id="p7"/>
       Value: <input name="v" size="30" value="" id="v7"/>
@@ -122,7 +122,7 @@
       </code>
     </p>
 
-    <form action="./query" method="get">
+    <form action="./query" method="get" name="query_entity">
       Entity: <input name="e" size="30" value="" id="e8"/>
       Property: <input name="p" size="30" value="" id="p8"/>
       Value: <input name="v" size="30" value="" id="v8"/>
