--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -10,18 +10,20 @@
     <h1>Entity Registry System (Cassandra and CumulusRDF as backend)</h1>
 
 <!-- START GRAPH OPERATIONS -->
-    <h3>Create new graph</h3>
+    <h3>Create new author or add info about an existing author</h3>
     <p>
       <code>
-	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "g=&#60;graph_name&#62;"  "http://diufpc304.unifr.ch:8080/ers/graph"
+	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "a=&#60;author&#62;"  "http://diufpc304.unifr.ch:8080/ers/author"
       </code>
     </p>
-    <form action="./graph" method="post" name="create_graph">
-      Graph: <input name="g" size="30" value"" id="g1" />
-      <input type="submit" value="Create"/>
+    <form action="./author" method="post" name="author">
+      Entity (author id): <input name="a_id" size="30" value="" id="a_id" />
+      Property : <input name="a_p" size="30" value="" id="a_p" />
+      Value : <input name="a_v" size="30" value="" id="a_v" />
+      <input type="submit" value="Add"/>
     </form>
 
-   <h3>Get all existing graphs</h3>
+<!--   <h3>Get all existing graphs</h3>
     <p>
       <code>
 	curl -v -X GET -H "http://diufpc304.unifr.ch:8080/ers/graph?g=&#60;graph_name&#62;"
@@ -30,17 +32,18 @@
     <form action="./graph" method="get" name="get_graph">
       <input type="submit" value="Show all"/>
     </form>
+-->
 
-    <h3>Delete existing graph</h3>
+    <h3>Delete all entities of an author</h3>
     <p>
       <code>
-	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/graph?g=&#60;graph_name&#62;" 
+	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/author?a_id=&#60;author&#62;" 
       </code>
     </p>
-    <form action="./graph" method="get" name="delete_graph">
+    <form action="./author" method="get" name="delete_graph">
       <input name="delete" type="hidden" size="15" value=""/>
-      Graph: <input name="g" size="30" value="" id="g2" />
-      <input type="submit" value="Delete graph"/>
+      Entity (author id): <input name="a_id" size="30" value="" id="g2" />
+      <input type="submit" value="Delete context"/>
     </form>
 <!-- END GRAPH STUFF -->
 
@@ -48,25 +51,25 @@
     <h3>Create entity</h3>
     <p>
       <code>
-	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;g=&#60;graph_name&#62;"  "http://diufpc304.unifr.ch:8080/ers/create"
+	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;g=&#60;author&#62;"  "http://diufpc304.unifr.ch:8080/ers/create"
       </code>
     </p>
     <form action="./create" method="post" name="create_entity">
       Entity: <input name="e" size="30" value="" id="e3"/>
       Property: <input name="p" size="30" value="" id="p3"/>
       Value: <input name="v" size="30" value="" id="v3"/>
-      Graph: <input name="g" size="15" value""  id="g3"/>
+      Author: <input name="a" size="15" value""  id="a3"/>
       <input type="submit" value="Create"/>
     </form>
 
    <h3>BulkLoad multiple entities</h3>
     <p>
       <code>
-	curl -v -X POST -i -F filedata=@./rdf_ntriples/repo10k.nt -F g=graph_name http://diufpc304.unifr.ch:8080/ers/bulkload
+	curl -v -X POST -i -F filedata=@./rdf_ntriples/repo10k.nt -F a=author http://diufpc304.unifr.ch:8080/ers/bulkload
       </code>
     </p>
     <form action="./bulkload" enctype="multipart/form-data" method="post" name="bulkload">
-      Graph: <input type="text" name="g" size="15" id="g4"/>
+      Author: <input type="text" name="a" size="15" id="a4"/>
       Entities file: <input type="file" name="file" size="30" value=""/>
       <input type="submit" value="BulkLoad"/>
     </form>
@@ -74,19 +77,19 @@
    <h3>Get entities (it returns also back links)</h3>
     <p>
       <code>
-	curl -v -X GET http://localhost:8080/ers/read?e=&#60;entity&#62;&amp;g=&#60;graph_name&#62;
+	curl -v -X GET http://localhost:8080/ers/read?e=&#60;entity&#62;&amp;a=&#60;author&#62;
       </code>
     </p>
     <form action="./read" method="get" name="read_entity">
       Entity: <input name="e" size="30" value="" id="e5"/>
-      Graph: <input name="g" size="15" value="" id="g5" />
+      Author: <input name="a" size="15" value="" id="g5" />
       <input type="submit" value="Read"/>
     </form>
 
     <h3>Update a given entity</h3>
     <p>
       <code>
-	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v_old=&#60;value1&#62;&amp;v_new=&#60;value2&#62;&amp;g=&#60;graph_name&#62;"  "http://diufpc304.unifr.ch:8080/ers/update"
+	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v_old=&#60;value1&#62;&amp;v_new=&#60;value2&#62;&amp;a=&#60;author&#62;"  "http://diufpc304.unifr.ch:8080/ers/update"
       </code>
     </p>
     <form action="./update" method="post" name="update_entity">
@@ -94,21 +97,21 @@
       Property: <input name="p" size="30" value="" id="p6"/>
       Value old: <input name="v_old" size="30" value="" id="v_old6"/>
       Value new: <input name="v_new" size="30" value="" id="v_new6"/>
-      Graph: <input name="g" size="15" value="" id="g6"/>
+      Author: <input name="a" size="15" value="" id="g6"/>
       <input type="submit" value="Update"/>
     </form>
 
     <h3>Delete entity</h3>
     <p>
       <code>
-	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/delete?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;g=&#60;graph_name&#62;" 
+	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/delete?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;a=&#60;author&#62;" 
       </code>
     </p>
     <form action="./delete" method="post" name="delete_entity">
       Entity: <input name="e" size="30" value="" id="e7"/>
       Property: <input name="p" size="30" value="" id="p7"/>
       Value: <input name="v" size="30" value="" id="v7"/>
-      Graph: <input name="g" size="15" value="" id="g7"/>
+      Author: <input name="a" size="15" value="" id="g7"/>
       <input type="submit" value="Delete"/>
     </form>
 
@@ -118,7 +121,7 @@
     </p>
     <p>
       <code>
-	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;g=&#60;graph_name&#62;"
+	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;a=&#60;author&#62;"
       </code>
     </p>
 
@@ -126,7 +129,7 @@
       Entity: <input name="e" size="30" value="" id="e8"/>
       Property: <input name="p" size="30" value="" id="p8"/>
       Value: <input name="v" size="30" value="" id="v8"/>
-      Graph: <input name="g" size=15" value="" id="g8"/>
+      Author: <input name="a" size=15" value="" id="g8"/>
       <input type="submit" value="Query"/>
     </form>
 
