--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Entity Registry System (Cassandra and CumulusRDF as backend)</h1>
 
-<!-- START GRAPH OPERATIONS -->
+<!-- START AUTHOR OPERATIONS -->
     <h3>Create new author or add info about an existing author</h3>
     <p>
       <code>
-	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "a=&#60;author&#62;"  "http://diufpc304.unifr.ch:8080/ers/author"
+	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "a_id=&#60;author&#62;a_p=&#60;property&#62;a_v=&#60;value&#62;"  "http://diufpc304.unifr.ch:8080/ers/author"
       </code>
     </p>
     <form action="./author" method="post" name="author">
@@ -45,24 +45,9 @@
       Entity (author id): <input name="a_id" size="30" value="" id="g2" />
       <input type="submit" value="Delete context"/>
     </form>
-<!-- END GRAPH STUFF -->
-
-
-    <h3>Create entity</h3>
-    <p>
-      <code>
-	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;g=&#60;author&#62;"  "http://diufpc304.unifr.ch:8080/ers/create"
-      </code>
-    </p>
-    <form action="./create" method="post" name="create_entity">
-      Entity: <input name="e" size="30" value="" id="e3"/>
-      Property: <input name="p" size="30" value="" id="p3"/>
-      Value: <input name="v" size="30" value="" id="v3"/>
-      Author: <input name="a" size="15" value""  id="a3"/>
-      <input type="submit" value="Create"/>
-    </form>
-
-   <h3>BulkLoad multiple entities</h3>
+<!-- END AUTHOR STUFF -->
+	
+   <h3>BulkLoad multiple entities for a given author</h3>
     <p>
       <code>
 	curl -v -X POST -i -F filedata=@./rdf_ntriples/repo10k.nt -F a=author http://diufpc304.unifr.ch:8080/ers/bulkload
@@ -74,7 +59,21 @@
       <input type="submit" value="BulkLoad"/>
     </form>
 
-   <h3>Get entities (it returns also back links)</h3>
+    <h3>Create entity</h3>
+    <p>
+      <code>
+	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;a=&#60;author&#62;"  "http://diufpc304.unifr.ch:8080/ers/create"
+      </code>
+    </p>
+    <form action="./create" method="post" name="create_entity">
+      Entity: <input name="e" size="30" value="" id="e3"/>
+      Property: <input name="p" size="30" value="" id="p3"/>
+      Value: <input name="v" size="30" value="" id="v3"/>
+      Author: <input name="a" size="15" value""  id="a3"/>
+      <input type="submit" value="Create"/>
+    </form>
+
+    <h3>Get entities (it returns also back links). If no author is given, it returns entities from all provenanves.</h3>
     <p>
       <code>
 	curl -v -X GET http://localhost:8080/ers/read?e=&#60;entity&#62;&amp;a=&#60;author&#62;
@@ -104,7 +103,7 @@
     <h3>Delete entity</h3>
     <p>
       <code>
-	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/delete?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;a=&#60;author&#62;" 
+	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/delete?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;a=&#60;author&#62;" 
       </code>
     </p>
     <form action="./delete" method="post" name="delete_entity">
@@ -117,11 +116,8 @@
 
     <h3>Query</h3>
     <p>
-      You can evaluate triple patterns via performing a HTTP GET request supplying <code>e, p  and/or v</code> parameters (in N3 syntax).
-    </p>
-    <p>
       <code>
-	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;a=&#60;author&#62;"
+	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;a=&#60;author&#62;"
       </code>
     </p>
 
