--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -9,17 +9,17 @@
   <body>
     <h1>Entity Registry System (Cassandra and CumulusRDF as backend)</h1>
 
-<!-- START AUTHOR OPERATIONS -->
-    <h3>Create new author or add info about an existing author</h3>
+<!-- START GRAPH OPERATIONS -->
+    <h3>Create new graph or add info about an existing graph</h3>
     <p>
       <code>
-	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "a_id=&#60;author&#62;a_p=&#60;property&#62;a_v=&#60;value&#62;"  "http://diufpc304.unifr.ch:8080/ers/author"
+	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "g_id=&#60;graph&#62;g_p=&#60;property&#62;g_v=&#60;value&#62;"  "http://diufpc304.unifr.ch:8080/ers/graph"
       </code>
     </p>
-    <form action="./author" method="post" name="author">
-      Entity (author id): <input name="a_id" size="30" value="" id="a_id" />
-      Property : <input name="a_p" size="30" value="" id="a_p" />
-      Value : <input name="a_v" size="30" value="" id="a_v" />
+    <form action="./graph" method="post" name="graph">
+      Graph: <input name="g_id" size="30" value="" id="g_id" />
+      Property : <input name="g_p" size="30" value="" id="g_p" />
+      Value : <input name="g_v" size="30" value="" id="g_v" />
       <input type="submit" value="Add"/>
     </form>
 
@@ -34,27 +34,27 @@
     </form>
 -->
 
-    <h3>Delete all entities of an author</h3>
+    <h3>Delete all entities of a graph</h3>
     <p>
       <code>
-	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/author?a_id=&#60;author&#62;" 
+	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/graph?g_id=&#60;graph&#62;" 
       </code>
     </p>
-    <form action="./author" method="get" name="delete_graph">
+    <form action="./graph" method="get" name="delete_graph">
       <input name="delete" type="hidden" size="15" value=""/>
-      Entity (author id): <input name="a_id" size="30" value="" id="g2" />
-      <input type="submit" value="Delete context"/>
+      Entity (graph id): <input name="g_id" size="30" value="" id="g2" />
+      <input type="submit" value="Delete graph"/>
     </form>
-<!-- END AUTHOR STUFF -->
+<!-- END GRAPH STUFF -->
 	
-   <h3>BulkLoad multiple entities for a given author</h3>
+   <h3>BulkLoad multiple entities for a given graph</h3>
     <p>
       <code>
-	curl -v -X POST -i -F filedata=@./rdf_ntriples/repo10k.nt -F a=author http://diufpc304.unifr.ch:8080/ers/bulkload
+	curl -v -X POST -i -F filedata=@./rdf_ntriples/repo10k.nt -F g=graph http://diufpc304.unifr.ch:8080/ers/bulkload
       </code>
     </p>
     <form action="./bulkload" enctype="multipart/form-data" method="post" name="bulkload">
-      Author: <input type="text" name="a" size="15" id="a4"/>
+      Graph: <input type="text" name="g" size="15" id="a4"/>
       Entities file: <input type="file" name="file" size="30" value=""/>
       <input type="submit" value="BulkLoad"/>
     </form>
@@ -62,33 +62,33 @@
     <h3>Create entity</h3>
     <p>
       <code>
-	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;a=&#60;author&#62;"  "http://diufpc304.unifr.ch:8080/ers/create"
+	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;g=&#60;graph&#62;"  "http://diufpc304.unifr.ch:8080/ers/create"
       </code>
     </p>
     <form action="./create" method="post" name="create_entity">
       Entity: <input name="e" size="30" value="" id="e3"/>
       Property: <input name="p" size="30" value="" id="p3"/>
       Value: <input name="v" size="30" value="" id="v3"/>
-      Author: <input name="a" size="15" value""  id="a3"/>
+      Graph: <input name="g" size="15" value""  id="a3"/>
       <input type="submit" value="Create"/>
     </form>
 
-    <h3>Get entities (it returns also back links). If no author is given, it returns entities from all provenanves.</h3>
+    <h3>Get entities (it returns also back links). If no graph is given, it returns entities from all provenanves.</h3>
     <p>
       <code>
-	curl -v -X GET http://localhost:8080/ers/read?e=&#60;entity&#62;&amp;a=&#60;author&#62;
+	curl -v -X GET http://localhost:8080/ers/read?e=&#60;entity&#62;&amp;g=&#60;graph&#62;
       </code>
     </p>
     <form action="./read" method="get" name="read_entity">
       Entity: <input name="e" size="30" value="" id="e5"/>
-      Author: <input name="a" size="15" value="" id="g5" />
+      Graph: <input name="g" size="15" value="" id="g5" />
       <input type="submit" value="Read"/>
     </form>
 
     <h3>Update a given entity</h3>
     <p>
       <code>
-	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v_old=&#60;value1&#62;&amp;v_new=&#60;value2&#62;&amp;a=&#60;author&#62;"  "http://diufpc304.unifr.ch:8080/ers/update"
+	curl -v -X POST -H "Content-Type: application/x-www-form-urlencoded" --data "e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v_old=&#60;value1&#62;&amp;v_new=&#60;value2&#62;&amp;g=&#60;graph&#62;"  "http://diufpc304.unifr.ch:8080/ers/update"
       </code>
     </p>
     <form action="./update" method="post" name="update_entity">
@@ -96,28 +96,28 @@
       Property: <input name="p" size="30" value="" id="p6"/>
       Value old: <input name="v_old" size="30" value="" id="v_old6"/>
       Value new: <input name="v_new" size="30" value="" id="v_new6"/>
-      Author: <input name="a" size="15" value="" id="g6"/>
+      Graph: <input name="g" size="15" value="" id="g6"/>
       <input type="submit" value="Update"/>
     </form>
 
     <h3>Delete entity</h3>
     <p>
       <code>
-	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/delete?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;a=&#60;author&#62;" 
+	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/delete?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;g=&#60;graph&#62;" 
       </code>
     </p>
     <form action="./delete" method="post" name="delete_entity">
       Entity: <input name="e" size="30" value="" id="e7"/>
       Property: <input name="p" size="30" value="" id="p7"/>
       Value: <input name="v" size="30" value="" id="v7"/>
-      Author: <input name="a" size="15" value="" id="g7"/>
+      Graph: <input name="g" size="15" value="" id="g7"/>
       <input type="submit" value="Delete"/>
     </form>
 
     <h3>Query</h3>
     <p>
       <code>
-	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;a=&#60;author&#62;"
+	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;g=&#60;graph&#62;"
       </code>
     </p>
 
@@ -125,7 +125,7 @@
       Entity: <input name="e" size="30" value="" id="e8"/>
       Property: <input name="p" size="30" value="" id="p8"/>
       Value: <input name="v" size="30" value="" id="v8"/>
-      Author: <input name="a" size=15" value="" id="g8"/>
+      Graph: <input name="g" size=15" value="" id="g8"/>
       <input type="submit" value="Query"/>
     </form>
 
