--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -23,26 +23,28 @@
       <input type="submit" value="Add"/>
     </form>
 
-<!--   <h3>Get all existing graphs</h3>
+   <h3>Test if graph exists</h3>
     <p>
       <code>
-	curl -v -X GET -H "http://diufpc304.unifr.ch:8080/ers/graph?g=&#60;graph_name&#62;"
+	curl -v -X GET -H "http://diufpc304.unifr.ch:8080/ers/exist_graph?g=&#60;graph_name&#62;"
       </code>
     </p>
-    <form action="./graph" method="get" name="get_graph">
-      <input type="submit" value="Show all"/>
+    <form action="./exist_graph" method="get" name="test_exist_graph">
+      Graph: <input name="g" size="30" value="" id="g_id2" />
+      <input type="submit" value="Exists?"/>
     </form>
--->
 
     <h3>Delete all entities of a graph</h3>
     <p>
+      NOTE: flag 'f' is optional; by default it is set to "no" (i.e. do not delete non-empty graphs)
       <code>
-	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/graph?g_id=&#60;graph&#62;" 
+	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/graph?g=&#60;graph&#62;&amp;f=y" 
       </code>
     </p>
     <form action="./graph" method="get" name="delete_graph">
       <input name="delete" type="hidden" size="15" value=""/>
-      Entity (graph id): <input name="g_id" size="30" value="" id="g2" />
+      Graph: <input name="g" size="30" value="" id="g2" />
+      Force (delete if graph not-empty): <input name="f" type="checkbox" value="y" />
       <input type="submit" value="Delete graph"/>
     </form>
 <!-- END GRAPH STUFF -->
@@ -73,7 +75,22 @@
       <input type="submit" value="Create"/>
     </form>
 
-    <h3>Get entities (it returns also back links). If no graph is given, it returns entities from all provenanves.</h3>
+    <h3>Test if entity exists</h3>
+    <p>
+      <code>
+	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/exist_entity?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;g=&#60;graph&#62;"
+      </code>
+    </p>
+
+    <form action="./exist_entity" method="get" name="exist_entity">
+      Entity: <input name="e" size="30" value="" id="e8"/>
+      Property: <input name="p" size="30" value="" id="p8"/>
+      Value: <input name="v" size="30" value="" id="v8"/>
+      Graph: <input name="g" size=15" value="" id="g8"/>
+      <input type="submit" value="Exists?"/>
+    </form>
+ 
+    <h3>Get entities (it returns also back links). If no graph is given, it returns entities from all provenances.</h3>
     <p>
       <code>
 	curl -v -X GET http://localhost:8080/ers/read?e=&#60;entity&#62;&amp;g=&#60;graph&#62;
@@ -128,6 +145,29 @@
       Graph: <input name="g" size=15" value="" id="g8"/>
       <input type="submit" value="Query"/>
     </form>
+    
+    <h3>Query entire graph</h3>
+    <p>
+      <code>
+	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query_graph?g=&#60;graph&#62;"
+      </code>
+    </p>
+    <form action="./query_graph" method="get" name="query_entity">
+      Graph: <input name="g" size=15" value="" id="g8"/>
+      <input type="submit" value="Query graph"/>
+    </form>
+
+    <h3>Query all graphs (since this may be very slow, the limit PER GRAPH parameter is mandatory)</h3>
+    <p>
+      <code>
+	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query_all_graphs?limit=1000"
+      </code>
+    </p>
+    <form action="./query_all_graphs" method="get" name="query_all_graphs">
+      Limit per graph: <input name="limit" size=5" value="" id="limit"/>
+      <input type="submit" value="Query all graphs"/>
+    </form>
+
 
     <!--
     <h2>Additional Operations</h2>
