--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -123,7 +123,7 @@
 	curl -v -X DELETE  "http://diufpc304.unifr.ch:8080/ers/delete?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;g=&#60;graph&#62;" 
       </code>
     </p>
-    <form action="./delete" method="post" name="delete_entity">
+    <form action="./delete" method="get" name="delete_entity">
       Entity: <input name="e" size="30" value="" id="e7"/>
       Property: <input name="p" size="30" value="" id="p7"/>
       Value: <input name="v" size="30" value="" id="v7"/>
