--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -36,9 +36,8 @@
 
    <h3>BulkLoad multiple entities for a given graph</h3>
     <p>
-      Note: DO NOT add "&#60" or "&#62" at graph name as "&#60" curl interprets it and cannot be escaped. <br/>
       <code>
-	curl -v -X POST -i -F filedata=@./rdf_ntriples/repo10k.nt -F g=graph http://diufpc304.unifr.ch:8080/ers/bulkload
+	curl -v -X POST -i -F filedata=@./rdf_ntriples/repo10k.nt --form-string "g=&lt;graph&gt;" http://diufpc304.unifr.ch:8080/ers/bulkload
       </code>
     </p>
     <form action="./bulkload" enctype="multipart/form-data" method="post" name="bulkload">
@@ -137,7 +136,7 @@
     <h3>Query</h3>
     <p>
       <code>
-	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;g=&#60;graph&#62;"
+	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query?e=&#60;entity&#62;&amp;p=&#60;property&#62;&amp;v=&#60;value&#62;&amp;g=&#60;graph&#62;&amp;limit=no"
       </code>
     </p>
 
@@ -146,17 +145,19 @@
       Property: <input name="p" size="30" value="" id="p8"/>
       Value: <input name="v" size="30" value="" id="v8"/>
       Graph: <input name="g" size=15" value="" id="g8"/>
+      Limit (optional): <input name="limit" size="5" value="" id="limit" />
       <input type="submit" value="Query"/>
     </form>
     
     <h3>Query entire graph</h3>
     <p>
       <code>
-	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query_graph?g=&#60;graph&#62;"
+	curl -v -X GET "http://diufpc304.unifr.ch:8080/ers/query_graph?g=&#60;graph&#62;&amp;limit=no"
       </code>
     </p>
     <form action="./query_graph" method="get" name="query_entity">
       Graph: <input name="g" size=15" value="" id="g8"/>
+      Limit (optional): <input name="limit" size="5" value="" id="limit" />
       <input type="submit" value="Query graph"/>
     </form>
 
