bug fixes for transactional support related to entity cloning

--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -47,7 +47,7 @@
     </form>
 
 
-    <h3>Delete all entities of a graph</h3>
+    <h3>Delete all entities of a graph (including the graph)</h3>
     <p>
       NOTE: flag 'f' is optional; by default it is set to "no" (i.e. do not delete non-empty graphs) <br/>
       <code>
@@ -75,7 +75,7 @@
       Graph: <input name="g" size="15" value""  id="a3"/>
       <input type="submit" value="Create"/>
     </form>
-
+   
     <h3>Test if entity exists</h3>
     <p>
       <code>
