--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -143,7 +143,7 @@
 
     <form action="./query" method="get" name="query_entity">
       Entity: <input name="e" size="30" value="" id="e8"/>
-      Property (if versioning, give ID and URN): <input name="p" size="30" value="" id="p8"/>
+      Property (if versioning, give ID and URN: <input name="p" size="30" value="" id="p8"/>
       Value: <input name="v" size="30" value="" id="v8"/>
       Graph: <input name="g" size=15" value="" id="g8"/>
       Limit (optional): <input name="limit" size="5" value="" id="limit" /> <br/>
