--- a/ers-global-visual/index.html
+++ b/ers-global-visual/index.html
@@ -46,12 +46,12 @@
                <div style="vertical-align:middle; text-align: center;">
                        <form name="plot_options">
                           <div style="padding: 5px;">  
-                             <div style="float:left; width:120px;">Sycnhed bytes: </div>
+                             <div style="float:left; width:120px;">Synced bytes: </div>
                              <div style="float:left;"><input type="radio" name="plot_type" value="BYTES"/></div>
                              <br>
                           </div>
                           <div style="padding: 5px;">  
-                             <div style="float:left; width: 120px;">Synched entities: </div>
+                             <div style="float:left; width: 120px;">Synced entities: </div>
                              <div style="float:left;"><input type="radio" name="plot_type" value="NUM" checked></div>
                              <br>
                           </div>
