--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Welcome to ers’s documentation! &mdash; ers  documentation</title>
+    <title>Welcome to ers’s documentation! &mdash; Entity Registry System 0.11 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '',
+        VERSION:     '0.11',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="ers  documentation" href="#" />
+    <link rel="top" title="Entity Registry System 0.11 documentation" href="#" />
     <link rel="next" title="ers Package" href="ers.html" /> 
   </head>
   <body>
@@ -41,7 +41,7 @@
         <li class="right" >
           <a href="ers.html" title="ers Package"
              accesskey="N">next</a> |</li>
-        <li><a href="#">ers  documentation</a> &raquo;</li> 
+        <li><a href="#">Entity Registry System 0.11 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -128,11 +128,11 @@
         <li class="right" >
           <a href="ers.html" title="ers Package"
              >next</a> |</li>
-        <li><a href="#">ers  documentation</a> &raquo;</li> 
+        <li><a href="#">Entity Registry System 0.11 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
-        &copy; Copyright 2013, Author.
+        &copy; Copyright 2013, ers-devs.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
