add versioning tree and the not-yet-committed list

--- a/ers-global/src/main/webapp/index.html
+++ b/ers-global/src/main/webapp/index.html
@@ -117,6 +117,7 @@
       Value old: <input name="v_old" size="30" value="" id="v_old6"/>
       Value new: <input name="v_new" size="30" value="" id="v_new6"/>
       Graph: <input name="g" size="15" value="" id="g6"/>
+      URN source (needed only for versioned graphs): <input name="urn" value="" id="URN" />
       <input type="submit" value="Update"/>
     </form>
 
