--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@ A typical deployment would feature a number of contributors working in closed ne
             <small>Download</small>
             .tar.gz file
           </a>
+          <a href="./index_documentation.html" class="button">
+            Documentation
+          </a>
 
           <p class="repo-owner"><a href="https://github.com/ers-devs/ers"></a> is maintained by <a href="https://github.com/ers-devs">ers-devs</a>.</p>
 
