--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ A typical deployment would feature a number of contributors working in closed ne
             .tar.gz file
           </a>
           <a href="./index_documentation.html" class="button">
-            Documentation
+            Docs
           </a>
 
           <p class="repo-owner"><a href="https://github.com/ers-devs/ers"></a> is maintained by <a href="https://github.com/ers-devs">ers-devs</a>.</p>
