--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@ A typical deployment would feature a number of contributors working in closed ne
             <small>Download</small>
             .tar.gz file
           </a>
+          <a href="http://82.196.15.149/sugarbox.ova" class="button">
+            <small>Download</small>
+            Virtual Machine
+          </a>
           <a href="./index_documentation.html" class="button">
             Docs
           </a>
